objects/Department__c.object
<CustomObject>
    <fields>
        <fullName>Alternate_Budget_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternate Budget Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Budget_Approver2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Budget_Approver1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Budget_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department_Number__c</fullName>
        <label>Department Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>All_Departments</fullName>
        <columns>NAME</columns>
        <columns>Department_Number__c</columns>
        <columns>Department_Head__c</columns>
        <columns>Budget_Manager__c</columns>
        <columns>Alternate_Budget_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Departments</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>